# lightfall-endstation-cms

./: .gitignore  .gitmodules  README.md  pyproject.toml  static.json  test_loader.py
docs/superpowers/plans/: 2026-06-20-nsls2-ring-status-statusbar.md  2026-06-22-cms-catalog-driven-sam.md  2026-06-23-cms-infra-reexpress-sam-reconciliation.md
docs/superpowers/specs/: 2026-06-20-cms-postlogin-device-backend-design.md  2026-06-20-nsls2-ring-status-statusbar-design.md
src/lightfall_endstation_cms/: __init__.py  assets.py  bootstrap.py  kafka_publisher.py  kernel_access.py  loader.py  manifest.py  plugin.py  run_engine_md.py  session_trigger.py  supplemental_data.py  tiled_writer.py
src/lightfall_endstation_cms/agents/: __init__.py  cms_notes.py
src/lightfall_endstation_cms/auth/: nsls2_provider.py
src/lightfall_endstation_cms/backends/: __init__.py  profile_collection.py
src/lightfall_endstation_cms/devices/: __init__.py  area_detectors.py  cms_happi.json  diodebox.py  ion_chambers.py  motors.py  serial_devices.py  shutters.py  xspress3.py
src/lightfall_endstation_cms/panels/: __init__.py  _base.py  beamline_panel.py  holder_panel.py  sample_panel.py
src/lightfall_endstation_cms/plans/: __init__.py  scan_align.py
src/lightfall_endstation_cms/services/: __init__.py  nsls2_beam_status.py
src/lightfall_endstation_cms/statusbar/: __init__.py  nsls2_beam_status.py
src/lucid_endstation_cms/: __init__.py  loader.py  manifest.py
src/lucid_endstation_cms/backends/: __init__.py  profile_collection.py
src/lucid_endstation_cms/devices/: __init__.py
tests/: test_assets.py  test_backend_populate.py  test_bootstrap_adopt.py  test_bootstrap_infra.py  test_bootstrap_sam.py  test_devices.py  test_kafka_publisher.py  test_kernel_access_by_name.py  test_manifest.py  test_manifest_auth_preload.py  test_manifest_statusbar.py  test_nsls2_auth.py  test_nsls2_beam_status_data.py  test_nsls2_beam_status_plugin.py  test_nsls2_beam_status_service.py  test_panels.py  test_plans.py  test_plugin.py  test_profile_blacklist.py  test_profile_keep.py  test_run_engine_md.py  test_run_profile_syspath.py  test_session_trigger.py  test_session_trigger_gating.py  test_supplemental_data.py  test_tiled_writer.py
