[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lucid-endstation-cms"
version = "0.1.0"
description = "LUCID plugins for NSLS-II CMS beamline (11-BM)"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.10"
authors = [
    { name = "ALS Beamline Controls", email = "controls@als.lbl.gov" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "ophyd>=1.6.0",
    "bluesky>=1.8.0",
    "lucid",
    "loguru",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[project.entry-points."lucid.plugins"]
lucid_endstation_cms = "lucid_endstation_cms.manifest:manifest"

[tool.hatch.build.targets.wheel]
packages = ["src/lucid_endstation_cms"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
