[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lightfall-endstation-cms"
version = "0.1.0"
description = "Lightfall plugins for NSLS-II CMS beamline (11-BM)"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.10"
authors = [
    { name = "ALS Beamline Controls", email = "controls@als.lbl.gov" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "ophyd>=1.6.0",
    "bluesky>=1.8.0",
    "lightfall",
    "loguru",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]
# Runtime dependencies of the CMS profile-collection itself, installed into the
# Lightfall venv so Lightfall can host the profile (run it in its console kernel
# and adopt RE/devices/mig). Lightfall already provides bluesky, ophyd, tiled,
# event-model, caproto, scipy, pandas, h5py, jinja2 etc.; this adds the rest.
# Modules whose deps are NOT installable on Python 3.13 are blacklisted by the
# ProfileSessionBootstrapper instead (24-area-detector-utilities -> telnetlib,
# 55-archiver -> arvpyf).
beamline = [
    "nslsii",
    "pyepics",
    "databroker",
    "redis-json-dict",
    "lmfit",
    "peakutils",
    "pyOlog",
    "paramiko",
    "suitcase-specfile",
]

[project.entry-points."lightfall.plugins"]
lightfall_endstation_cms = "lightfall_endstation_cms.manifest:manifest"

[tool.hatch.build.targets.wheel]
packages = ["src/lightfall_endstation_cms"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
