[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lightfall-endstation-cms"
version = "0.1.0"
description = "Lightfall plugins for NSLS-II CMS beamline (11-BM)"
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.10"
authors = [
    { name = "ALS Beamline Controls", email = "controls@als.lbl.gov" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "ophyd>=1.6.0",
    "bluesky>=1.8.0",
    "lightfall",
    "loguru",
    "numpy",
    # Devices are defined in a happi JSON DB shipped with this package
    # (devices/cms_happi.json) and loaded via Lightfall's HappiBackend.
    "happi",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]
# Runtime dependencies of the CMS profile-collection itself, installed into the
# Lightfall venv so Lightfall can host the profile (run it in its console kernel
# and adopt RE/devices/mig). Lightfall already provides bluesky, ophyd, tiled,
# event-model, caproto, scipy, pandas, h5py, jinja2 etc.; this adds the rest.
# Modules whose deps are NOT installable on Python 3.13 are blacklisted by the
# ProfileSessionBootstrapper instead (24-area-detector-utilities -> telnetlib,
# 55-archiver -> arvpyf).
beamline = [
    "nslsii",
    "pyepics",
    "databroker",
    # databroker 2.x ships a v1 compat layer (`from databroker import Broker`,
    # `databroker.assets.handlers`) that the CMS profile uses, but it does not
    # declare these legacy runtime deps — add them explicitly.
    "humanize",
    "doct",
    "pims",
    "six",
    # NSLS-II's Redis (info.cms.nsls2.bnl.gov) is old and rejects the RESP3
    # HELLO handshake that redis-py >=6 sends unconditionally on connect
    # ("unknown command HELLO"). Pin to 5.x, which only sends HELLO for RESP3
    # (default is RESP2) and so works against the old server.
    "redis>=5,<6",
    "redis-json-dict",
    "lmfit",
    "peakutils",
    "pyOlog",
    "paramiko",
    "suitcase-specfile",
]

[project.entry-points."lightfall.plugins"]
lightfall_endstation_cms = "lightfall_endstation_cms.manifest:manifest"

[tool.hatch.build.targets.wheel]
packages = ["src/lightfall_endstation_cms"]
# Ship the happi device database as package data (not a .py file, so make the
# inclusion explicit rather than relying on default file selection).
force-include = { "src/lightfall_endstation_cms/devices/cms_happi.json" = "lightfall_endstation_cms/devices/cms_happi.json" }

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
